src/test/resources/syntax/invalid/group_definition_multiple_flags.unpick
unpick v3
group int g
    @flags
    @flags
